адаптация вопросов под категорию слова